fluxcd/apps/overlays/production/jfrog-artifactory/statefulset-artifactory-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jfrog-artifactory-jcr
spec:
  template:
    spec:
      imagePullSecrets:
      - name: jcr-pcfae-dungeon-pull-secret
      containers:
      - name: artifactory
        image: docker.jcr.pcfae.com/jfrog/artifactory-jcr:7.111.11
        volumeMounts:
        - $patch: replace
        - name: compass-jfrog-artifactory-data
          mountPath: /var/opt/jfrog/artifactory
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
        resources:
          requests:
            cpu: "250m"
            memory: "2Gi"
          limits:
            cpu: "2000m"
            memory: "8Gi"
  volumeClaimTemplates:
  - metadata:
      name: compass-jfrog-artifactory-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: ceph-rbd
      resources:
        requests:
          storage: 100Gi
