fluxcd/apps/overlays/production/jfrog-artifactory/statefulset-postgres-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jfrog-artifactory-postgres
spec:
  template:
    spec:
      containers:
      - name: postgres
        image: docker.jcr.pcfae.com/postgres:16.6-alpine
        volumeMounts:
        - $patch: replace
        - name: hyrule-castle-jfrog-artifactory-postgres-data
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "2000m"
            memory: "2Gi"
  volumeClaimTemplates:
  - metadata:
      name: hyrule-castle-jfrog-artifactory-postgres-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: ceph-rbd
      resources:
        requests:
          storage: 20Gi
