fluxcd/apps/overlays/production/jfrog-artifactory/service-artifactory-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: jfrog-artifactory-jcr
  annotations:
    lbipam.cilium.io/ips: "172.22.30.122"
    lbipam.cilium.io/sharing-key: "compass"
spec:
  type: LoadBalancer
