fluxcd/apps/overlays/production/jfrog-artifactory/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jfrog-artifactory-jcr
  namespace: compass
spec:
  parentRefs:
  - name: xylem-gateway
    namespace: arylls-lookout
    sectionName: https
  hostnames:
  - "jfrog.pcfae.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jfrog-artifactory-jcr
      port: 8082
